force-app/main/default/objects/Return_Line__c/Return_Line__c.object-meta.xml
<CustomObject>
    <label>Return Line</label>
    <pluralLabel>Return Lines</pluralLabel>
    <nameField>
        <label>Return Line Number</label>
        <type>AutoNumber</type>
        <displayFormat>RL-{00000}</displayFormat>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>