force-app/main/default/objects/Return_Line__c/fields/Order_Item__c.field-meta.xml
<CustomField>
    <fullName>Order_Item__c</fullName>
    <label>Order Item</label>
    <type>Lookup</type>
    <referenceTo>OrderItem</referenceTo>
    <relationshipLabel>Return Lines</relationshipLabel>
    <relationshipName>Return_Lines</relationshipName>
</CustomField>